# gwz-cli

./: .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  README.md  docs-requirements.txt  mkdocs.yml
.github/workflows/: docs.yml  publish.yml
dev-docs/: AgentQuickStart.md  GwzGaps.md  GwzProgressSpec.md  GwzRcSpec.md  GwzStashPlan.md  GwzStashSpec.md
dev-docs/history/: GwzMemberGitSpec.md  GwzProgressSpec.md
docs/: AgentBootstrap.md  CLI.md  Concepts.md  Install.md  MachineOutput.md  QuickStart.md  README.md  Releases.md  RepoLifecycle.md  RootWorkspace.md  Troubleshooting.md  Workflows.md
docs/commands/: add.md  branch.md  capture.md  clone.md  commit.md  diff.md  forall.md  init.md  ls.md  materialize.md  merge.md  pull.md  push.md  repo.md  snapshot.md  stash.md  status.md  tag.md
examples/: generate_cli_docs.rs
scripts/: generate_cli_reference.py  release.py
src/: add_after.rs  add_long.rs  append_branch_summary.rs  branch_after.rs  branch_long.rs  branch_status_json.rs  cli_after.rs  cli_long.rs  cli_reference.rs  clirequest.rs  clone_after.rs  clone_long.rs  diff_after.rs  diff_exec.rs  diff_long.rs  diff_render.rs  diffargs.rs  forall.rs  git_status_json.rs  git_transfer_progress_json.rs  globalargs.rs  impl_from_syncarg_for_gwz_core_syncbehavior.rs  init_after.rs  init_long.rs  lib.rs  lsargs.rs  main.rs  materialize_after.rs  materialize_long.rs  merge_render.rs  nameargs.rs  pager.rs  parse_non_negative_i64.rs  parse_positive_i64.rs  progress_detail.rs  pull_after.rs  pull_long.rs  push_after.rs  push_long.rs  repo_after.rs  (+24 more)
src/tests/: g00.rs  g01.rs  g02.rs  g03.rs  g04.rs  g05.rs  g06.rs  g07.rs  g08.rs  mod.rs
tests/: diff_workflows.rs  local_workflows.rs  publish_workflow.rs  release_script.rs
tests/fixtures/: merge_status_human.txt
