load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")

exports_files(["Cargo.toml"])  # crate_universe reads this

# gwz — the GWZ CLI library, atop gwz-core + clap/console/serde_json.
# NOTE: gwz-core is wired to the LOCAL crate (//gwz-core:gwz_core), not the git tag in
# Cargo.toml. For crate_universe to agree, gwz-cli's `gwz-core` dep must be a workspace/path
# dep (see the workspace Cargo.toml requirement in MODULE.bazel comments).
rust_library(
    name = "gwz_lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_name = "gwz",
    crate_root = "src/lib.rs",
    edition = "2024",
    compile_data = glob(["**/*"], exclude = ["**/*.rs", "BUILD.bazel", "Cargo.toml"], allow_empty = True),
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + ["//gwz-core:gwz_core"],
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

# gwz — the GWZ CLI binary wrapper.
rust_binary(
    name = "gwz",
    srcs = ["src/main.rs"],
    crate_root = "src/main.rs",
    edition = "2024",
    deps = [":gwz_lib"],
    visibility = ["//visibility:public"],
)
