[package]
name = "gwz-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
rust-version = "1.95"

[[bin]]
name = "gwz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
console = "0.16"
gwz-core = { path = "../gwz-core" }
serde_json = "1"

[dev-dependencies]
git2 = "0.21"
